Project

General

Profile

Actions

Bug #47053

closed

Default value for 'bluestore_volume_selection_policy' is wrong

Added by Igor Fedotov over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We should use "use_some_extra" instead to benefit from more flexible DB space usage.


Related issues 2 (0 open2 closed)

Copied to bluestore - Backport #47194: nautilus: Default value for 'bluestore_volume_selection_policy' is wrongResolvedNeha OjhaActions
Copied to bluestore - Backport #47195: octopus: Default value for 'bluestore_volume_selection_policy' is wrongResolvedNeha OjhaActions
Actions #1

Updated by Igor Fedotov over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36750
Actions #2

Updated by Kefu Chai over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47194: nautilus: Default value for 'bluestore_volume_selection_policy' is wrong added
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47195: octopus: Default value for 'bluestore_volume_selection_policy' is wrong added
Actions #5

Updated by Igor Fedotov over 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF