os/bluestore: enable more flexible bluefs space management by default.

It turned out that we did't enable it when introduced this feature in
https://github.com/ceph/ceph/pull/29687.

Fixes: https://tracker.ceph.com/issues/47053

Signed-off-by: Igor Fedotov <ifedotov@suse.com>
(cherry picked from commit 41823db09c609155db31afbd03b817c2a578fa9d)